; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_NV_shader_buffer_load.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_NV_shader_buffer_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLAD_GL_NV_shader_buffer_load = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"glMakeBufferResidentNV\00", align 1
@glad_glMakeBufferResidentNV = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [26 x i8] c"glMakeBufferNonResidentNV\00", align 1
@glad_glMakeBufferNonResidentNV = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [21 x i8] c"glIsBufferResidentNV\00", align 1
@glad_glIsBufferResidentNV = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [28 x i8] c"glMakeNamedBufferResidentNV\00", align 1
@glad_glMakeNamedBufferResidentNV = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [31 x i8] c"glMakeNamedBufferNonResidentNV\00", align 1
@glad_glMakeNamedBufferNonResidentNV = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [26 x i8] c"glIsNamedBufferResidentNV\00", align 1
@glad_glIsNamedBufferResidentNV = common dso_local global i64 0, align 8
@.str.6 = private unnamed_addr constant [28 x i8] c"glGetBufferParameterui64vNV\00", align 1
@glad_glGetBufferParameterui64vNV = common dso_local global i64 0, align 8
@.str.7 = private unnamed_addr constant [33 x i8] c"glGetNamedBufferParameterui64vNV\00", align 1
@glad_glGetNamedBufferParameterui64vNV = common dso_local global i64 0, align 8
@.str.8 = private unnamed_addr constant [20 x i8] c"glGetIntegerui64vNV\00", align 1
@glad_glGetIntegerui64vNV = common dso_local global i64 0, align 8
@.str.9 = private unnamed_addr constant [16 x i8] c"glUniformui64NV\00", align 1
@glad_glUniformui64NV = common dso_local global i64 0, align 8
@.str.10 = private unnamed_addr constant [17 x i8] c"glUniformui64vNV\00", align 1
@glad_glUniformui64vNV = common dso_local global i64 0, align 8
@.str.11 = private unnamed_addr constant [20 x i8] c"glGetUniformui64vNV\00", align 1
@glad_glGetUniformui64vNV = common dso_local global i64 0, align 8
@.str.12 = private unnamed_addr constant [23 x i8] c"glProgramUniformui64NV\00", align 1
@glad_glProgramUniformui64NV = common dso_local global i64 0, align 8
@.str.13 = private unnamed_addr constant [24 x i8] c"glProgramUniformui64vNV\00", align 1
@glad_glProgramUniformui64vNV = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64 (i8*)*)* @load_GL_NV_shader_buffer_load to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_GL_NV_shader_buffer_load(i64 (i8*)* %0) #0 {
  %2 = alloca i64 (i8*)*, align 8
  store i64 (i8*)* %0, i64 (i8*)** %2, align 8
  %3 = load i32, i32* @GLAD_GL_NV_shader_buffer_load, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %35

6:                                                ; preds = %1
  %7 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %8 = call i64 %7(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  store i64 %8, i64* @glad_glMakeBufferResidentNV, align 8
  %9 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %10 = call i64 %9(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  store i64 %10, i64* @glad_glMakeBufferNonResidentNV, align 8
  %11 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %12 = call i64 %11(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  store i64 %12, i64* @glad_glIsBufferResidentNV, align 8
  %13 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %14 = call i64 %13(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.3, i64 0, i64 0))
  store i64 %14, i64* @glad_glMakeNamedBufferResidentNV, align 8
  %15 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %16 = call i64 %15(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.4, i64 0, i64 0))
  store i64 %16, i64* @glad_glMakeNamedBufferNonResidentNV, align 8
  %17 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %18 = call i64 %17(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.5, i64 0, i64 0))
  store i64 %18, i64* @glad_glIsNamedBufferResidentNV, align 8
  %19 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %20 = call i64 %19(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.6, i64 0, i64 0))
  store i64 %20, i64* @glad_glGetBufferParameterui64vNV, align 8
  %21 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %22 = call i64 %21(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.7, i64 0, i64 0))
  store i64 %22, i64* @glad_glGetNamedBufferParameterui64vNV, align 8
  %23 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %24 = call i64 %23(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.8, i64 0, i64 0))
  store i64 %24, i64* @glad_glGetIntegerui64vNV, align 8
  %25 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %26 = call i64 %25(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.9, i64 0, i64 0))
  store i64 %26, i64* @glad_glUniformui64NV, align 8
  %27 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %28 = call i64 %27(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.10, i64 0, i64 0))
  store i64 %28, i64* @glad_glUniformui64vNV, align 8
  %29 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %30 = call i64 %29(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.11, i64 0, i64 0))
  store i64 %30, i64* @glad_glGetUniformui64vNV, align 8
  %31 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %32 = call i64 %31(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.12, i64 0, i64 0))
  store i64 %32, i64* @glad_glProgramUniformui64NV, align 8
  %33 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %34 = call i64 %33(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.13, i64 0, i64 0))
  store i64 %34, i64* @glad_glProgramUniformui64vNV, align 8
  br label %35

35:                                               ; preds = %6, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
